--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ compiler:
 	- clang
 	- gcc
 script: make
+
+dist: xenial
+
+script:
+	- git ls-files src/ | xargs clang-format -i && git diff --exit-code
