--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: c
+
+os: linux
+
 compiler:
     - clang
     - gcc
-script: make
-
-dist: xenial
 
 script:
     - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+    - make
+
+dist: xenial
