--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
     - gcc
 
 script:
-    - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+    - git ls-files src/*.c src/*.h | xargs clang-format -i && git diff --exit-code
     - make
 
 dist: xenial
